# cuda-heat-conduction

./: CMakeLists.txt  LICENSE  README.md  _CMakeLists.txt  build.sh
include/: defer.h  imgui_impl_xlib.h  logging.h  state.h  time_utils.h
src/: imgui_impl_xlib.cpp  main.cu
